solve the overflow nav issue by changing the background img

--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ svg {
     position: absolute;
     transform: translateX(100%);
     transition: transform .5s ease;
-    width: 65%;
+    width: 260px;
     top: 0;
     bottom: 0;
     right: 0;
@@ -527,6 +527,11 @@ svg {
 }
 
 @media (max-width:61em) and (min-width: 32em) {
+  .destination-page {
+    background: url(./assets/destination/background-destination-tablet.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .destination-hero-section {
     padding: 0 34px;
   }
@@ -580,6 +585,11 @@ svg {
 }
 
 @media (max-width:32em) {
+  .destination-page {
+    background: url(./assets/destination/background-destination-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .destination-hero-section {
     padding: 0 0px;
   }
